Actualizar modal para mostrar enlaces a Canva y juego

--- a/Block.html
+++ b/Block.html
@@ -614,6 +614,7 @@
                         <div class="prose max-w-none text-gray-700 leading-relaxed text-lg">
                             <p>${post.content}</p>
                             ${post.gameLink ? `<p class="mt-4"><a href="${post.gameLink}" target="_blank" class="text-blue-600 hover:text-blue-800 underline">Jugar Ahora →</a></p>` : ''}
+                            ${post.canvaLink ? `<p class="mt-4"><a href="${post.canvaLink}" target="_blank" class="text-blue-600 hover:text-blue-800 underline">Ver en Canva →</a></p>` : ''}
                         </div>
                     </div>
                 `;
