Simplificar orden de posts: ordenar solo por fecha

--- a/Block.html
+++ b/Block.html
@@ -461,8 +461,8 @@
                 title: 'Mapa Conceptual',
                 date: '7 de Julio de 2025',
                 author: 'Cristian Camacho',
-                category: 'Glosario',
-                categoryDisplay: 'Glosario',
+                category: 'Mapa',
+                categoryDisplay: 'Mapa',
                 media: [
                     { type: 'image', url: '' }
                 ],
